--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,29 @@
  *= require_tree .
  *= require_self
  */
+.css-style {
+    border-radius: .2em;
+    width: 40px;
+    background-color: transparent;
+    color: #34DDDD;
+    text-decoration: none;
+}
+
+h2 {
+    text-shadow: 2px 2px #cccccc;
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
+
+p{
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
+
+.shadow {
+    border-radius: .2em;
+    background-color: transparent;
+    color: #34DDDD;
+    text-decoration: none;
+    -webkit-box-shadow: 2px 2px 4px 5px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow:    2px 2px 4px 5px #ccc;  /* Firefox 3.5 - 3.6 */
+    box-shadow:         2px 2px 4px 5px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
