changed img name

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id="page-content">
     <div class="row">
         <div class="col-sm-4" id="headshot-container">
-            <%= image_tag("headshot.jpeg", :alt => "Profile Image", class: "img-fluid shadow") %>
+            <%= image_tag("headshot.jpg", :alt => "Profile Image", class: "img-fluid shadow") %>
 <!--             <img class="responsive" img id="headshot" src="./images/headshot.jpeg" alt="Headshot for Terry"> -->
         </div>
         <!--       about section -->
