--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -15,7 +15,7 @@
         <a class="btn btn-dark shadow" a href="https://linkedin.com/in/terry-n-robinson"><%= image_tag("linkedin.png", :alt => "Linked-In", class: "css-style") %></a>
         <a class="btn btn-dark shadow" a href="https://github.com/robinsont0408"><%= image_tag("github.png", :alt => "Github", class: "css-style") %></a>
         <a class="btn btn-dark shadow" a href="mailto: terryrobinson@trobinson.co"><%= image_tag("gmail.png", :alt => "E-Mail", class: "css-style") %></a>
-        <embed src="https://open.spotify.com/track/012sQYFq2UVtBeMap9NTLj" autostart="true" loop="true" hidden="true"><embed>
+        <audio src="https://open.spotify.com/track/012sQYFq2UVtBeMap9NTLj" autoplay controls loop></audio>
             
         <!-- At the end of all your content, add Bootstrap JS here -->
 
